<resources>
    <string name="app_name">Fit Assistant</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Start a New Activity</string>

    <string name="api_key">AIzaSyBANr2-AitrjG936c7-syT1PLcyRNREpq8</string>

    <string name="empty_view_title_text">Let\'s stop being lazy...</string>
    <string name="empty_view_subtitle_text">Get started by performing an activity</string>

    <string name="pref_name_label">Enter your name</string>
    <string name="pref_name_key" translatable="false">name</string>
    <string name="pref_name_default" translatable="false"></string>

    <string name="type_running">Running</string>
    <string name="type_walking">Walking</string>
    <string name="type_bicycling">Bicycling</string>

    <string name="type_clear">Clear</string>
    <string name="type_cloudy">Cloudy</string>
    <string name="type_foggy">Foggy</string>
    <string name="type_hazy">Hazy</string>
    <string name="type_icy">Icy</string>
    <string name="type_rainy">Rainy</string>
    <string name="type_snowy">Snowy</string>
    <string name="type_stormy">Stormy</string>
    <string name="type_windy">Windy</string>
    <string name="type_unknown">Unknown</string>

    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>

    <string name="run">Run</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>

    <string name="distance">Distance (m)</string>
    <string name="duration">Duration</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="pref_notifications_title">Activities Notifications</string>

    <string name="pref_run_notifications_key" translatable="false">run_notifications</string>
    <string name="pref_run_notifications_label">Run Notifications</string>

    <string name="pref_walk_notifications_key" translatable="false">walk_notifications</string>
    <string name="pref_walk_notifications_label">Walk Notifications</string>

    <string name="pref_bike_notifications_key" translatable="false">bike_notifications</string>
    <string name="pref_bike_notifications_label">Bicycle Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="chat_error_message">Oops, I don\'t understand you.</string>
    <string name="chat_location_error_message">Damn, without location permission there is little I can do.</string>
    <string name="chat_great_idea_message">What a great idea!</string>
    <string name="chat_weather_message">Here is the weather for today:</string>
    <string name="chat_nearby_places_message">Here are the nearby %ss:</string>
    <string name="chat_no_nearby_places_message">Oops, it seems there are no nearby %ss near you.</string>
    <string name="chat_no_internet_message">I cannot answer you without internet! I\'m just a bot after all.</string>
    <string name="chat_connect_internet_message">Please turn your internet on.</string>

    <string name="pick_activity">Pick an activity</string>

    <string name="category_activity_name">Name</string>
    <string name="hint_activity_name">Activity Name</string>

    <string name="category_activity_type">Type</string>
    <string name="category_activity_weather">Wheather</string>
    <string name="category_activity_date">Date</string>
    <string name="category_activity_time">Start Time</string>
    <string name="category_activity_duration">Duration</string>
    <string name="category_activity_distance">Distance</string>
    <string name="save_activity">Save Activity</string>

    <string name="editor_activity_title_new_activity">Add an Activity</string>
    <string name="editor_activity_title_review_activity">Review Activity</string>
    <string name="editor_activity_title_edit_activity">Edit Activity</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard_activity_dialog_msg">Are you sure you want to discard current activity?</string>
    <string name="discard_activity_dialog_title">Discard Activity?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="continue_activity">Continue</string>
    <string name="delete_dialog_msg">Delete this activity?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_dialog_msg">"Activity tracking accuracy is improved by enabling GPS. Do you want to enable GPS?"</string>
    <string name="settings_title">"Location Unavailable"</string>
    <string name="play_music_dialog_msg">I\'ve detected you plugged in your headphones. Do you wish to start Google Play?</string>
    <string name="play_music_dialog_title">Headphones plugged in!</string>

    <string name="editor_delete_act_successful">Activity deleted</string>
    <string name="editor_delete_act_failed">Error with deleting activity</string>

    <string name="act_saved">Activity saved</string>
    <string name="act_not_saved">Error saving activity</string>

    <string name="editor_update_act_successful">Activity updated</string>
    <string name="editor_update_act_failed">Error with updating activity</string>

    <string name="duration_holder">"--:--"</string>
    <string name="distance_holder">"-:--"</string>
    <string name="date_holder">"--/--/--"</string>
    <string name="time_holder">"--:--"</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="text_humidity">Humidity: %d</string>


</resources>
